--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 spring:
-  datasource.url: jdbc:h2:mem:testdb
+  datasource.url: jdbc:h2:file:./db/botdb
+
+  jpa.hibernate.ddl-auto: update
+
   data.jpa.repositories.bootstrap-mode: default
